[package]
name = "ArbEngine"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json", "gzip", "brotli"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.14.0"
anyhow = "1.0"
dotenv = "0.15"

[lib]
path = "src/lib.rs"


