[package]
name = "ArbEngine"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json", "gzip", "brotli"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.14.0"
anyhow = "1.0"
dotenv = "0.15"

alloy = { version = "1.1.3", features = [
  "full",
  "node-bindings",
  "provider-debug-api",
] }
eyre = "0.6.12"
futures-util = "0.3.31"
dashmap = "6.1.0"


[lib]
path = "src/lib.rs"



